--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "mintcraft-nft-gateway",
   "version": "0.1.0",
-  "description": "Mintcraft NFT Server",
+  "description": "Mintcraft NFT Gateway",
   "main": "index.js",
   "repository": "git@github.com:MintEngine/mintcraft-nft-gateway.git",
   "author": "Tang Bo Hao <tech@btang.cn>",
@@ -15,8 +15,7 @@
     "serve": "node dist/index.js"
   },
   "dependencies": {
-    "@polkadot/api": "^4.15.1",
-    "@polkadot/api-contract": "^4.15.1"
+    "@jadepool/logger": "^2.0.2"
   },
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "4",
