--- a/package.json
+++ b/package.json
@@ -16,11 +16,12 @@
   },
   "dependencies": {
     "@jadepool/consts": "^1.0.0-alpha.0",
-    "@jadepool/instance": "^1.0.0-alpha.9",
+    "@jadepool/instance": "^1.0.0-alpha.10",
     "@jadepool/logger": "^2.0.3",
     "@jadepool/service-consul": "^1.0.0-alpha.3",
     "@jadepool/service-http": "^1.0.0-alpha.4",
     "@jadepool/service-socketio": "^1.0.0-alpha.2",
+    "@jadepool/types": "^1.0.0-alpha.2",
     "config": "^3.3.6",
     "lodash": "^4.17.21"
   },
