--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@jadepool/service-http": "^1.0.0-alpha.4",
     "@jadepool/service-socketio": "^1.0.0-alpha.2",
     "@jadepool/types": "^1.0.0-alpha.2",
+    "@koa/router": "^10.0.0",
     "config": "^3.3.6",
     "lodash": "^4.17.21"
   },
