--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
   },
   "devDependencies": {
     "@types/config": "^0.0.38",
+    "@types/koa__router": "^8.0.4",
     "@types/lodash": "^4.14.170",
     "@types/node": "^15.14.0",
     "@typescript-eslint/eslint-plugin": "4",
