--- a/package.json
+++ b/package.json
@@ -20,17 +20,21 @@
     "@jadepool/logger": "^2.0.3",
     "@jadepool/service-consul": "^1.0.0-alpha.3",
     "@jadepool/service-http": "^1.0.0-alpha.4",
-    "@jadepool/service-socketio": "^1.0.0-alpha.2",
+    "@jadepool/service-socketio": "^1.0.0-alpha.3",
     "@jadepool/types": "^1.0.0-alpha.2",
     "@koa/router": "^10.0.0",
     "config": "^3.3.6",
-    "lodash": "^4.17.21"
+    "koa-sendfile": "^3.0.0",
+    "lodash": "^4.17.21",
+    "parameter": "^3.6.0"
   },
   "devDependencies": {
     "@types/config": "^0.0.38",
+    "@types/koa": "^2.13.3",
     "@types/koa__router": "^8.0.4",
     "@types/lodash": "^4.14.170",
     "@types/node": "^15.14.0",
+    "@types/parameter": "^3.6.1",
     "@typescript-eslint/eslint-plugin": "4",
     "@typescript-eslint/parser": "^4.28.0",
     "del": "^6.0.0",
