--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "@jadepool/service-http": "^1.0.0-alpha.6",
     "@jadepool/service-socketio": "^1.0.0-alpha.3",
     "@jadepool/types": "^1.0.0-alpha.2",
-    "@mintcraft/types": ">= 0.1",
+    "@mintcraft/types": "./packages/types",
     "@koa/multer": "^3.0.0",
     "@koa/router": "^10.0.0",
     "config": "^3.3.6",
@@ -38,7 +38,7 @@
     "@types/koa__multer": "^2.0.2",
     "@types/koa__router": "^8.0.4",
     "@types/lodash": "^4.14.170",
-    "@types/node": "^15.14.0",
+    "@types/node": "^14.0.0",
     "@types/parameter": "^3.6.1",
     "@typescript-eslint/eslint-plugin": "4",
     "@typescript-eslint/parser": "^4.28.0",
