--- a/services/blockchain-substrate-ink/package.json
+++ b/services/blockchain-substrate-ink/package.json
@@ -15,5 +15,9 @@
   "dependencies": {
     "@polkadot/api": "^4.15.1",
     "@polkadot/api-contract": "^4.15.1"
+  },
+  "devDependencies": {
+    "@types/node": "^14.0.0",
+    "ts-node": "^10.0.0"
   }
 }
