--- a/services/storage-ipfs/package.json
+++ b/services/storage-ipfs/package.json
@@ -13,6 +13,8 @@
     "start": "ts-node src/index.ts"
   },
   "dependencies": {
+    "ipfs-car": "^0.4.2",
+    "nft.storage": "^3.0.1"
   },
   "devDependencies": {
     "@types/node": "^14.0.0",
