impl entity get metadata

--- a/package.json
+++ b/package.json
@@ -22,9 +22,10 @@
     "@jadepool/service-http": "^1.0.0-alpha.6",
     "@jadepool/service-socketio": "^1.0.0-alpha.3",
     "@jadepool/types": "^1.0.0-alpha.2",
-    "@mintcraft/types": "./packages/types",
     "@koa/multer": "^3.0.0",
     "@koa/router": "^10.0.0",
+    "@mintcraft/types": "./packages/types",
+    "axios": "^0.21.1",
     "config": "^3.3.6",
     "koa-sendfile": "^3.0.0",
     "lodash": "^4.17.21",
